--- a/src/pages/ConverterPage.css
+++ b/src/pages/ConverterPage.css
@@ -77,6 +77,7 @@
 .converter-page-main > * {
   width: 100%;
   max-width: 900px;
+  text-align: center;
 }
 
 .converter-examples {
